[package]
name = "diesel-setup-deps"
version = "0.1.0"
authors = ["Diggory Blake <diggsey@googlemail.com>"]
edition = "2018"
description = "Perform diesel setup for dependencies"
repository = "https://github.com/Diggsey/diesel-setup-deps"
license = "MIT OR Apache-2.0"

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
